Fix formatting issues in index.html

--- a/‎index.html
+++ b/‎index.html
@@ -130,3 +130,4 @@ var Gj=function(a,b,c){a<b?Fj(a+1,b):_.Ud.log(Error("ja`"+a+"`"+b),{url:c})},Fj=
 })(this.gbar_);
 // Google Inc.
 </script><div ng-non-bindable=""></div>
+<!-- cache refresh -->
